--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ body {
 
 .contact-info__item-icon-wrapper {
   margin-right: 10px;
+  margin-top: 3px;
   width: 20px;
   display: flex;
   justify-content: center;
